Init commit lab 5

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,15 +1,27 @@
 akka {
-  loglevel = "DEBUG"
+  loglevel = DEBUG
   actor {
+    provider = "akka.remote.RemoteActorRefProvider"
     debug {
+      # enable function of LoggingReceive, which is to log any received message at
+      # DEBUG level
       receive = off
     }
   }
+  remote {
+    enabled-transports = ["akka.remote.netty.tcp"]
+    netty.tcp {
+      hostname = "127.0.0.1"
+    }
+  }
 }
-
+akka.log-dead-letters-during-shutdown = off
+akka.log-dead-letters = off
 akka.persistence.journal.leveldb.native = on
 akka.persistence.journal.plugin = "akka.persistence.journal.leveldb"
 akka.persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
 akka.persistence.journal.leveldb.dir = "target/journal"
 akka.persistence.snapshot-store.local.dir = "target/snapshots"
 
+serverapp.akka.remote.netty.tcp.port = 2552
+clientapp.akka.remote.netty.tcp.port = 2553
